@@ -61,7 +61,7 @@ let rec output_scope_item scope_item =
       | Xor    w         -> assign cell (input 0 ^ " ^ " ^ input 1)
       | Or     w         -> assign cell (input 0 ^ " | " ^ input 1)
       | Concat (wl, wr)  -> assign cell ("{" ^ input 0 ^ ", " ^ input 1 ^ "}")
-      | Select (w, bits) -> assign cell ("{" ^ String2.join (List.map (fun bit -> input 0 ^ "[" ^ string_of_int bit ^ "]") bits) ", " ^ "}")
+      | Select (w, bit)  -> if w = 1 then assign cell (input 0) else assign cell (input 0 ^ "[" ^ string_of_int bit ^ "]")
       | Eq     w         -> assign cell (input 0 ^ " == " ^ input 1)
       | Lt     w         -> assign cell (input 0 ^ " < " ^ input 1)
       | Add    w         -> assign cell (input 0 ^ " + " ^ input 1)
